--- a/css/css.css
+++ b/css/css.css
@@ -123,7 +123,12 @@
     width: 30%;
     height: 5px;
     background-color: blue;
-    align : left
-
   }
   /*Form Contact*/
+.regis-form h4{
+  text-align: center;
+
+}
+.regis-form table{
+  margin: auto;
+}
